[gd_scene load_steps=18 format=2]

[ext_resource path="res://game/rooms/MediumRoom.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/objects/ClimbPipe.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/objects/ClimbPipeBend.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/objects/Block.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/objects/Ramp.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/maps/tests/test-room-2/TestRoom2.gd" type="Script" id=7]
[ext_resource path="res://game/objects/ClimbingPad.tscn" type="PackedScene" id=8]
[ext_resource path="res://game/objects/Platform.tscn" type="PackedScene" id=9]
[ext_resource path="res://game/objects/MonkeyBar.tscn" type="PackedScene" id=10]
[ext_resource path="res://game/objects/GrappleTarget.tscn" type="PackedScene" id=11]
[ext_resource path="res://game/objects/Walkway.tscn" type="PackedScene" id=12]
[ext_resource path="res://game/targets/Target.tscn" type="PackedScene" id=13]
[ext_resource path="res://game/objects/Wind15.tscn" type="PackedScene" id=14]
[ext_resource path="res://game/objects/RedKey.tscn" type="PackedScene" id=15]
[ext_resource path="res://game/objects/RedPanel.tscn" type="PackedScene" id=16]
[ext_resource path="res://game/maps/tests/test-room-2/TestRoom2.lmbake" type="BakedLightmapData" id=17]

[node name="TestRoom2" type="Spatial"]
script = ExtResource( 7 )

[node name="Environment" type="Spatial" parent="."]

[node name="MediumRoom" parent="Environment" instance=ExtResource( 1 )]

[node name="Block" parent="Environment" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 17.5 )

[node name="Ramp" parent="Environment" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 17.5 )

[node name="MonkeyBar" parent="Environment" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 7, 17.5 )

[node name="MonkeyBar3" parent="Environment" instance=ExtResource( 10 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -3.5, 7, 17 )

[node name="MonkeyBar4" parent="Environment" instance=ExtResource( 10 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -4.5, 7, 17 )

[node name="MonkeyBar5" parent="Environment" instance=ExtResource( 10 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -4.5, 7, 18 )

[node name="MonkeyBar6" parent="Environment" instance=ExtResource( 10 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -3.5, 7, 18 )

[node name="MonkeyBar2" parent="Environment" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 7, 17.5 )

[node name="MonkeyBar7" parent="Environment" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 7, 17.5 )

[node name="ClimbPipeBend" parent="Environment" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, -5, 8, 17 )

[node name="ClimbPipe4" parent="Environment" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 10.5, 16 )

[node name="ClimbPipeBend2" parent="Environment" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, -1, 4.37114e-08, 0, -4.37114e-08, -1, 1, -4.37114e-08, 1.91069e-15, -5, 13, 17 )

[node name="ClimbPipe6" parent="Environment" instance=ExtResource( 2 )]
transform = Transform( 1.91069e-15, 4.37114e-08, -1, 1, -4.37114e-08, 0, -4.37114e-08, -1, -4.37114e-08, -5, 14, 19.5 )

[node name="ClimbingPad" parent="Environment" instance=ExtResource( 8 )]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -5.5, 14, 20 )

[node name="ClimbingPad2" parent="Environment" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 13.5, 20 )

[node name="ClimbingPad3" parent="Environment" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 18, 19.9 )

[node name="ClimbingPad4" parent="Environment" instance=ExtResource( 8 )]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 2.5, 18.5, 15 )

[node name="Platform" parent="Environment" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 18, 17.5 )

[node name="ClimbPipe7" parent="Environment" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.4, 21.5, 19.9 )

[node name="ClimbPipe8" parent="Environment" instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 5.9, 25, 19.9 )

[node name="ClimbPipeBend3" parent="Environment" instance=ExtResource( 3 )]
transform = Transform( 1, -1.06581e-14, 4.02341e-21, 0, -4.37114e-08, -1, 1.06581e-14, 1, -4.37114e-08, 3.4, 24, 19.9 )

[node name="Platform2" parent="Environment" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.5, 18, 17.5 )

[node name="Walkway" parent="Environment" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.5, 18, 12.5 )

[node name="ClimbingPad5" parent="Environment" instance=ExtResource( 8 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 20, 14, 0 )

[node name="ClimbPipe" parent="Environment" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19, 22, 0 )

[node name="ClimbPipeBend4" parent="Environment" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 20, 19.5, 0 )

[node name="ClimbPipeBend5" parent="Environment" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 20, 24.5, 0 )

[node name="Walkway2" parent="Environment" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.5, 18, -12.5 )

[node name="Platform3" parent="Environment" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.5, 18, -17.5 )

[node name="GrappleTarget" parent="Environment" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.5, 31, -17.5 )

[node name="Platform4" parent="Environment" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 18, -17.5 )

[node name="Platform6" parent="Environment" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 18, -17.5 )

[node name="Platform7" parent="Environment" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12, -17.5 )

[node name="Platform5" parent="Environment" instance=ExtResource( 9 )]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 1.5, 15.5, -17.5 )

[node name="ClimbingPad6" parent="Environment" instance=ExtResource( 8 )]
transform = Transform( -4.37114e-08, 0, -1, -1, -4.37114e-08, 4.37114e-08, -4.37114e-08, 1, 1.91069e-15, -7.6, 18.5, -20 )

[node name="ClimbingPad7" parent="Environment" instance=ExtResource( 8 )]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 8.74228e-08, -4.37114e-08, 1, 1, 4.37114e-08, -8.74228e-08, -7.6, 18, -19.5 )

[node name="ClimbingPad9" parent="Environment" instance=ExtResource( 8 )]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 8.74228e-08, -4.37114e-08, 1, 1, 4.37114e-08, -8.74228e-08, -2.6, 18, -19.5 )

[node name="ClimbingPad8" parent="Environment" instance=ExtResource( 8 )]
transform = Transform( 8.74228e-08, -8.74228e-08, 1, 4.37114e-08, -1, -8.74228e-08, 1, 4.37114e-08, -8.74228e-08, 1.5, 18, -19.5 )

[node name="Platform8" parent="Environment" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.5, 19, -12.5 )

[node name="OmniLight" type="OmniLight" parent="Environment"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 37, 0 )
light_size = 1.0
omni_range = 47.0

[node name="BakedLightmap" type="BakedLightmap" parent="Environment"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20, 0 )
extents = Vector3( 21, 21, 21 )
light_data = ExtResource( 17 )

[node name="Player" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 5, 18 )

[node name="Target1" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.5, 19, 17.5 )
enabled = false

[node name="RedPanel" parent="." instance=ExtResource( 16 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1.5, 14, -17 )

[node name="RedKey" parent="." instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 13.1, -18 )
visible = false

[node name="Wind15" parent="." instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 8, -18 )
enabled = false

[node name="Target2" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.5, 20, -12.5 )
enabled = false

[connection signal="fade_complete" from="Player" to="." method="_on_Player_fade_complete"]
[connection signal="target_triggered" from="Target1" to="." method="_on_Target1_target_triggered"]
[connection signal="key_inserted" from="RedPanel" to="." method="_on_RedPanel_key_inserted"]
[connection signal="key_removed" from="RedPanel" to="." method="_on_RedPanel_key_removed"]
[connection signal="target_triggered" from="Target2" to="." method="_on_Target2_target_triggered"]
